--- a/src/styles/Hero.css
+++ b/src/styles/Hero.css
@@ -1,5 +1,5 @@
-#hero {
-  height: 850px;
+/* #hero {
+  height: 100vh;
   background-image: url("../images/hero-image.jpg");
   background-size: cover;
   background-position: center;
@@ -7,6 +7,24 @@
 }
 
 #hero h1 {
-  font-size: 2rem;
+  position: relative;
+  font-size: 2.4rem;
   font-weight: 600;
+  z-index: 100;
 }
+
+#hero::before {
+  content: "";
+  z-index: 1;
+  position: absolute;
+  background-image: linear-gradient(black, transparent);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  opacity: 0.7;
+}
+
+.social-icons {
+  font-size: 2.6rem;
+} */
